# wscad-registry

./: .gitignore  README.md  analysis.ipynb  analysis;nodes=100.ipynb  analysis;nodes=196.ipynb  pyproject.toml  run_experiments.py  run_experiments_resource_aware.py  run_nsgaii.py
datasets/: __main__.py  central;nodes=100.json  central;nodes=196.json  community;nodes=100.json  p2p;nodes=100.json  p2p;nodes=196.json  utils.py
datasets/inputs/: base.json  base_ipfs_minimal.json  base_minimal.json  base_recommended.json  nodes=100.json  nodes=100;mobility=faster.json  nodes=100;mobility=slower.json  nodes=196.json  nodes=196;mobility=faster.json  nodes=196;mobility=slower.json
datasets/strategies/: __init__.py
datasets/strategies/registry_provisioning/: __init__.py  central.py  community.py  p2p.py
datasets/strategies/service_provisioning/: __init__.py  delay_based.py
simulation/: __main__.py  custom_methods.py  utils.py  wrapper.py
simulation/strategies/: __init__.py  custom_registry_provisioning.py  dynamic_enhanced_registry_provisioning.py  dynamic_registry_provisioning.py  p2p_enhanced_registry_provisioning.py  p2p_registry_provisioning.py  resource_aware_dynamic_registry_provisioning.py  utils.py
