[tool.poetry]
name = "dynamic-registry-provisioning"
version = "0.1.0"
description = "Dynamic registry provisioning on edge computing infrastructures"
authors = ["Lucas Roges <lucasrogesaraujo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
edge-sim-py = {git = "git@github.com:lucasroges/EdgeSimPy.git"}
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
ipykernel = "^6.27.0"
pymoo = "^0.6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
